# elements_quiz

./: .pdm-python  README.md  pyproject.toml
.github/workflows/: python-app.yml
periodic_quiz/: __init__.py  __main__.py  elements.py  game.py
tests/: test_quiz.py
