[project]
name = "periodic-quiz"
version = "1.0.0"
description = "A CLI game to learn chemical symbols and atomic numbers of the periodic table"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
periodic-quiz = "periodic_quiz:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pdm.scripts]
lint = "flake8 periodic_quiz/ --count --select=E9,F63,F7,F82 --show-source --statistics"
test = "python -m pytest"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "flake8>=7.3.0",
]
